# shared_communication

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  shared_comm-config.cmake
include/: sync_helper.h
include/api/: error_code.h  shared_comm_base.h  shared_socket.h
src/: shared_comm_base.cpp  shared_socket.cpp  sync_helper.cpp
test_cases/: test_client.cpp  test_server.cpp
tools/: repair_communication.cpp
